Fix: Metadata overflow, update README"

--- a/source/css/_viewer.scss
+++ b/source/css/_viewer.scss
@@ -444,7 +444,7 @@
 }
 
 #contentDiv {
-    overflow-y: scroll;
+    overflow-y: auto;
     max-height: 20em;
     padding: 0em 0em 0em 2em;
 }
